updated clear search icon and fixed padding on mobile search input

--- a/client/src/components/ListingPageNav/ListingPageNav.scss
+++ b/client/src/components/ListingPageNav/ListingPageNav.scss
@@ -113,18 +113,15 @@
       font-size: 22px;
     }
   }
-
-
 }
 
 .test{
   margin:0;
   font-size: 20;
   color:black;
-  height:49px;
+  height:50px;
   width:100%;
   display:block;
   padding-top: 7px;
   box-sizing: border-box;
-  //border:1px solid red;
 }
