--- a/client/src/components/ListingSearchBar/ListingSearchBar.scss
+++ b/client/src/components/ListingSearchBar/ListingSearchBar.scss
@@ -3,8 +3,6 @@
   width:100%;
   max-width: 400px;
   margin-right: 20px;
-
-  //margin-right:30px;
   font-size: 0;
   border:1px solid #d5d5d5;
   box-sizing: border-box;
@@ -14,7 +12,7 @@
 
   &__clear-search-icon{
     font-size: 16px;
-    color:#555;
+    color:#9a9a9a;
     position:absolute;
     height:35px;
     width:40px;
@@ -22,8 +20,7 @@
     z-index:110;
     text-align: center;
     line-height: 33px;
-    pointer-events: none;
-    //right:80px;
+    display:none;
     &:hover{
       cursor:pointer;
     }
@@ -52,7 +49,6 @@
     transition: all .3s ease;
     position:relative;
     z-index: 100;
-    //opacity:0;
 
     &:hover{
       background:#35a880;
@@ -130,7 +126,6 @@
     margin:0;
     display:inline-block;
 
-
     &:focus{
       outline:none;
     }
@@ -140,7 +135,6 @@
     text-align: left;
     height:38px;
     font-size: 16px;
-    //background:red;
   }
 
   &__location-header-title{
@@ -181,10 +175,9 @@
 .active{
     &.listing-search-bar  {
       .listing-search-bar{
-
-        &__clear-search-icon{
-          right:0;
-          //right:80px;
+       &__clear-search-icon.is-visible{
+          right:40px;
+          display:inline-block;
           &:hover{
             cursor:pointer;
           }
@@ -194,7 +187,7 @@
           display:none;
         }
         &__back-btn{
-          width:50px;
+          width:40px;
           height:35px;
           display:inline-block;
           text-align: center;
@@ -212,6 +205,7 @@
         }
         &__mobile-search-container{
           position:fixed;
+          padding-right: 40px;
           top:0;
           bottom:0;
           left:0;
@@ -226,8 +220,6 @@
           width:100%;
           display:inline-block;
           vertical-align: top;
-          border:1px solid red;
-          //min-width:400px;
         }
         &__type-ahead-result{
           &:last-child{
@@ -251,15 +243,23 @@
           display:none;
         }
         &__mobile-search-container{
+          padding-right:0;
           position:static;
           background:none;
         }
+
+        &__clear-search-icon.is-visible{
+           right:0;
+           display:inline-block;
+           &:hover{
+             cursor:pointer;
+           }
+         }
+
         &__input{
           padding-left:10px;
-          //height:33px;
           background:none;
           margin-top: 0;
-          //width:100%;
           border-radius: 5px 5px 0 0;
         }
         &__input-container{
@@ -275,9 +275,6 @@
           &:last-child{
             border-radius: 0 0 5px 5px;
           }
-        }
-        &__location-header{
-          //padding-left:10px;
         }
       }
     }
